crates/cosmon-cli/tests/snapshots/help__sessions_checkpoint.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Leave — or read — the note that lets someone else resume this mission

Usage: cs sessions checkpoint [OPTIONS] <COMMAND>

Commands:
  publish  Publish this pilot's hand-over record for a mission
  stage    Write the same record as a draft, for the hook to publish at the next natural transition. Takes exactly the flags `publish` takes
  list     List the checkpoints published for a mission
  show     Show one checkpoint in full

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
