crates/cosmon-cli/tests/snapshots/help__sessions_checkpoint_list.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
List the checkpoints published for a mission

Usage: cs sessions checkpoint list [OPTIONS] --mission <MOLECULE_ID>

Options:
      --config <PATH>          Path to the state directory (default: the galaxy's .cosmon/state/)
      --mission <MOLECULE_ID>  The mission whose checkpoints to list
      --session <SID>          Show only what this session published
  -v, --verbose                Enable verbose output
      --json                   Output in JSON format
  -h, --help                   Print help
