crates/cosmon-cli/tests/snapshots/help__sessions_hook.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Wire the routine gestures — take a seat, read the mailbox, leave a note — into the agent itself, so they happen without being typed

Usage: cs sessions hook [OPTIONS] <COMMAND>

Commands:
  install    Wire this pilot's provider to run the co-pilotage hook
  uninstall  Remove the co-pilotage hook, leaving the rest of the file untouched
  status     Report whether the hook is wired, and what it has cost
  run        The hook body — invoked by the provider, not usually by a human

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
